Moved code to Java17; Polishing